--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,40 +9,48 @@
     android:orientation="vertical"
     tools:context=".SplashScreen">
 
+
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="159dp"
-        android:layout_height="162dp"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/aviothiclgo" />
-
+        android:layout_width="126dp"
+        android:layout_height="142dp"
+        android:layout_marginStart="28dp"
+        android:src="@drawable/aviothiclgo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
     <TextView
         android:id="@+id/Aviothic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_toRightOf="@+id/logo"
+        android:layout_marginStart="-10dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/protos"
-       android:layout_marginTop="330dp"
         android:text="Aviothic"
         android:textColor="@color/logo"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/logo"
+        app:layout_constraintTop_toTopOf="@+id/logo"
+        app:layout_constraintVertical_bias="0.449" />
 
     <TextView
         android:id="@+id/CyberShrishti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_toRightOf="@+id/logo"
-        android:layout_below="@+id/Aviothic"
         android:fontFamily="@font/calligraphy1"
-        android:layout_centerVertical="true"
         android:text="A CyberShrishti Initiative"
         android:textColor="@color/cyberShrishti"
-        android:layout_marginStart="20dp"
         android:textSize="15sp"
         android:textStyle="bold"
-        />
-</RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="@+id/logo"
+        app:layout_constraintEnd_toEndOf="@+id/Aviothic"
+        app:layout_constraintHorizontal_bias="0.382"
+        app:layout_constraintStart_toEndOf="@+id/logo"
+        app:layout_constraintTop_toBottomOf="@+id/Aviothic"
+        app:layout_constraintVertical_bias="0.0" />
+</androidx.constraintlayout.widget.ConstraintLayout>
