--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,7 +15,7 @@
         android:id="@+id/logo"
         android:layout_width="365dp"
         android:layout_height="643dp"
-        android:src="@drawable/LogoVariant_1"
+        android:src="@drawable/logo_variant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
